# IM_project

./: .gitignore  README.md  pyproject.toml
data/raw/: ZeroCouponCurve.csv
notebooks/: run_im_pipeline.ipynb  run_im_pipeline_patched.ipynb
src/: __init__.py  apc.py  backtesting.py  config.py  constants.py
src/market_data/: __init__.py  cleaner.py  curve.py  loader.py
src/pricing/: __init__.py  bonds.py  discounting.py
src/risk/: __init__.py  es.py  ewma.py  im.py  lookback.py  pnl.py  risk_factors.py  scenarios.py
tests/: test_pipeline.py
